--- a/collection.html
+++ b/collection.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <nav>
         <ul>
             <li><a href="index.html">Home</a> </li>
@@ -18,20 +19,53 @@
     </nav>
 
 
+
     <h1>Collection</h1>
-    <p>Welcome to my collection page, this page will hold a collection of exotic pictures which I've taken whilst traveling around the globe. These pictures were all captured whilst I was on holiday in numerous places such as greece, morroco, spain, </p>
+    <p>Welcome to my collection page, this page will hold a collection of exotic pictures which I've taken whilst traveling around the globe. These pictures were all captured whilst I was on holiday in numerous places such as greece, morroco, spain and portugual. </p>
 
 
-<a href="https://spando360.github.io/tyrone-bio/biography.html"><img src="Image3.jpg." width="200">"</a>
 
-      <a href="https://spando360.github.io/tyrone-bio/biography.html"><img src="Image1.jpg." width="200">"</a>
 
-      <a href="https://spando360.github.io/tyrone-bio/biography.html"><img src="Image2.jpg." width="200">"</a>
+
+    <div class="row">
+            <div class="col">
+                <div class="col"><img src="Image3.jpg."alt="holiday" width="200"  height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col"><img src="Image3.jpg." alt="holiday" width="200" height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col">   <img src="Image1.jpg." alt="holiday" width="200" height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col">  <img src="Image5.jpg." alt="holiday" width="200" height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col">  <img src="Image2.jpg." alt="holiday" width="200" height="320"></div>
+            </div>
+            <div class="col">
+                <div class="col"> <img src="Image2.jpg." alt="holiday" width="200" height="320"> </div>
+            </div>
+
+        </div>
+
 
 
 
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
 <footer>
     <h2>Keep in contact</h2>
     <p>Email - TyroneM@contactme.co.uk</p>
