--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
+
+
 <body>
+
     <a href="https://spando360.github.io/tyrone-bio/cv.html">link to cv</a>
     <nav>
         <ul>
@@ -18,10 +21,11 @@
         </ul>
     </nav>
     <h1> Tyrones bio</h1>
-    <p>Hello and welcome to my biography, this is where you'll get to find out a whole lot about me. Dont hesitate to explore your way around my website using my user friendly navigations located on the top of the webpage. Click on the picture below to be
-        directed straight to my biography.</p>
-
     <a href="https://spando360.github.io/tyrone-bio/biography.html"><img src="new picture.jpg.png" width="295">"</a>
+    <p>Hello and welcome to my collection website, this is where you'll get to find out a whole lot of exlusive exotic images which I've captured whilst traveling. Dont hesitate to explore your way around my website using my user friendly navigations located on the top of the webpages. Click on the picture below to be
+        directed straight to my collection page.</p>
+
+
 
 </body>
 
