changed header on homepage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="contact.html">Contact Me</a> </li>
         </ul>
     </nav>
-    <h1> My Collection</h1>
+    <h1> Homepage</h1>
     <a href="https://spando360.github.io/tyrone-bio/biography.html"><img src="new picture.jpg.png" width="295">"</a>
     <p>Hello and welcome to my collection website, this is where you'll get to find out a whole lot of exlusive exotic images which I've captured whilst traveling. Dont hesitate to explore your way around my website using my user friendly navigations located on the top of the webpages. Click on the picture below to be
         directed straight to my collection page.</p>
