--- a/collection.html
+++ b/collection.html
@@ -2,53 +2,77 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Collection</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Collections</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="collection.html">Collection</a> </li>
+            <li><a href="bio.html">Biography</a> </li>
+            <li><a href="contact.html">Contact Me</a> </li>
+        </ul>
+    </nav>
 
 
-    <nav>
-        <h1>Cirriculum Vitae</h1>
-        <ul>
-            <li><a href="index.html">Home</a> </li>
-            <li><a href="collection.html">Collection</a> </li>
-            <li><a href="bio.html">Biography</a> </li>
-            <li><a href="contact.html">Contact Me</a> </li>
-        </ul>
-    </nav>
-      </header>
+
+    <h1>Collection</h1>
+    <p>Welcome to my collection page, this page will hold a collection of exotic pictures which I've taken whilst traveling around the globe. These pictures were all captured whilst I was on holiday in numerous places such as greece, morroco, spain and portugual. </p>
+
+
 <div>
 
 </div>
-  <div class="row">
-        <div class="col">
-            <div class="col"><img src="image5.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="image2.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="Image3.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="Image2.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="image1.JPG" alt="ME"   width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="Image4.PNG" alt="ME" width="200" height="320"></div>
-        </div>
-</div>
+
+    <div class="row">
+            <div class="col">
+                <div class="col"><img src="Image(4).jpg."alt="holiday" width="200"  height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col"><img src="Image(1).jpg." alt="holiday" width="200" height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col"><img src="Image(4).jpg." alt="holiday" width="200" height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col"><img src="Image(5).jpg." alt="holiday" width="200" height "320"></div>
+            </div>
+            <div class="col">
+                <div class="col"><img src="Image(2).jpg." alt="holiday" width="200" height="320"></div>
+            </div>
+            <div class="col">
+                <div class="col"> <img src="Image(3).jpg." alt="holiday" width="200" height="320"> </div>
+            </div>
+
+        </div>
 
 
-  <footer>
-   <p>Copyright © 2017</p>
-  </footer>
+
+
+
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <h2>Keep in contact</h2>
+    <p>Email - TyroneM@contactme.co.uk</p>
+    <a href="https://drive.google.com/file/d/0B4H15TJEyv-uR2dNQWNDcnhXcDRoSk41VkVTRVIxQUM3clNB/view?usp=sharing">Link to Cirriculum Vitae doucument</a>
+    <p>Phone number - 07947382891</p>
+    <p>Twitter - @tyrone300_</p>
+
 
 </html>
