--- a/collection.html
+++ b/collection.html
@@ -2,53 +2,77 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Collection</title>
-    <link rel="stylesheet" href="style.css">
+
+    <meta charset="utf-8">
+    <title>Collection</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
+
+    <header>
 
 
-    <nav>
-        <h1>Cirriculum Vitae</h1>
-        <ul>
-            <li><a href="index.html">Home</a> </li>
-            <li><a href="collection.html">Collection</a> </li>
-            <li><a href="bio.html">Biography</a> </li>
-            <li><a href="contact.html">Contact Me</a> </li>
-        </ul>
-    </nav>
-      </header>
-<div>
 
-</div>
-  <div class="row">
-        <div class="col">
-            <div class="col"><img src="IMG_1585.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="IMG_3196.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="IMG_3249.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="IMG_3335.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="IMG_3503.JPG" alt="ME" width="200" height="320"></div>
-        </div>
-        <div class="col">
-            <div class="col"><img src="IMG_4180.PNG" alt="ME" width="200" height="320"></div>
-        </div>
-</div>
+        <nav>
+
+            <h1>Cirriculum Vitae</h1>
+            <ul>
+
+                <li><a href="index.html">Home</a> </li>
+
+                <li><a href="collection.html">Collection</a> </li>
+
+                <li><a href="bio.html">Biography</a> </li>
+
+                <li><a href="contact.html">Contact Me</a> </li>
+                </ul>
+            </nav>
+        </header>
+    <div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col">
+
+            <div class="col"><img src="Image(4).JPG" alt="ME" width="200" height="320"></div>
+            </div>
+
+        <div class="col">
+
+            <div class="col"><img src="Image(4).JPG" alt="ME" width="200" height="320"></div>
+            </div>
+
+        <div class="col">
+
+            <div class="col"><img src="Image(3).JPG" alt="ME" width="200" height="320"></div>
+            </div>
+
+        <div class="col">
+
+            <div class="col"><img src="Image(1).JPG" alt="ME" width="200" height="320"></div>
+            </div>
+
+        <div class="col">
+
+            <div class="col"><img src="Image(5).JPG" alt="ME" width="200" height="320"></div>
+            </div>
+
+        <div class="col">
+
+            <div class="col"><img src="Image(2).JPG" alt="ME" width="200" height="320"></div>
+            </div>
+    </div>
 
 
-  <footer>
-   <p>Copyright © 2017</p>
-  </footer>
+
+    <footer>
+
+        <p>Copyright © 2017</p>
+        </footer>
 </body>
 
 </html>
