--- a/contact.html
+++ b/contact.html
@@ -2,70 +2,53 @@
 <html>
 
 <head>
-    <meta http-equiv="content-type" charset="utf-8">
-    <title>contact me</title>
-    <link rel="stylesheet" href="style.css">
-
-    <style media="screen">
-        #form-warp {
-            width: 600px;
-            border: 5px solid #ccc;
-            background-color: #afc8de;
-            margin: 50px auto;
-            padding: 20px 0;
-        }
-
-        form {
-            width: 500px;
-            margin: 0 auto;
-        }
-    </style>
+    <meta charset="utf-8">
+    <title>Collection</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div id+ "form-wrap">
-
-
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a> </li>
-                <li><a href="collection.html">Collection</a> </li>
-                <li><a href="bio.html">Biography</a> </li>
-                <li><a href="contact.html">Contact Me</a> </li>
-            </ul>
-        </nav>
+    <header>
 
 
-        <form>
-            <h1>Contact Me</h1>
+        <nav>
+            <h1>The collection</h1>
+            <ul>
+                <li><a href="index.html">Home</a> </li>
+                <li><a href="collection.html">Collection</a> </li>
+                <li><a href="bio.html">Biography</a> </li>
+                <li><a href="contact.html">Contact Me</a> </li>
+            </ul>
+        </nav>
+    </header>
+    <div>
 
-            <fieldset>
-                <h4>Contact Me</h4>
-                <label class="labelone" for "name">Name: </label>
-                <input name="name" />
-                <label for="email">Email: </label>
-                <input name="email" />
-                <label for="comments">Comments: </label>
-                <textarea name="comments"></textarea>
-            </fieldset>
-            <fieldset>
-                <input class="btn" type="submit" value="Send Email" />
-                <input class="btn" type="reset" value="Reset Form" />
-            </fieldset>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="col"><img src="Image(4).jpg" alt="ME" width="200" height="320"></div>
+        </div>
+        <div class="col">
+            <div class="col"><img src="Image(4).jpg" alt="ME" width="200" height="320"></div>
+        </div>
+        <div class="col">
+            <div class="col"><img src="Image(3).jpg" alt="ME" width="200" height="320"></div>
+        </div>
+        <div class="col">
+            <div class="col"><img src="Image(1).jpg" alt="ME" width="200" height="320"></div>
+        </div>
+        <div class="col">
+            <div class="col"><img src="Image(2).jpg" alt="ME" width="200" height="320"></div>
+        </div>
+        <div class="col">
+            <div class="col"><img src="Image(5).jpg" alt="ME" width="200" height="320"></div>
+        </div>
+    </div>
 
-        </form>
 
-
-
-
+    <footer>
+        <p>Copyright © 2017</p>
+    </footer>
 </body>
-<footer>
-    <h2>Keep in contact</h2>
-    <p>Email - TyroneM@contactme.co.uk</p>
-    <a href="https://spando360.github.io/tyrone-bio/cv.html">Link to Cirriculim</a>
-    <p>Phone number - 07947382891</p>
-    <p>Twitter - @tyrone300_</p>
-</footer>
 
 </html>
