--- a/collection.html
+++ b/collection.html
@@ -28,55 +28,9 @@
 
 </body>
 
-<div>
-
-</div>
 
 <div class="row">
-
-    <div class="col">
-
-        <div class="col"><img src="Image(4).jpg." alt="holiday" width="200" height "320"></div>
-        </div>
-
-    <div class="col">
-
-        <div class="col"><img src="Image(1).jpg." alt="holiday" width="200" height "320"></div>
-        </div>
-
-    <div class="col">
-
-        <div class="col"><img src="Image(4).jpg." alt="holiday" width="200" height "320"></div>
-        </div>
-
-    <div class="col">
-
-        <div class="col"><img src="Image(5).jpg." alt="holiday" width="200" height "320"></div>
-        </div>
-
-    <div class="col">
-
-        <div class="col"><img src="Image(2).jpg." alt="holiday" width="200" height="320"></div>
-        </div>
-
-    <div class="col">
-
-        <div class="col"> <img src="Image(3).jpg." alt="holiday" width="200" height="320"> </div>
-        </div>
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-<h2>Keep in contact</h2>
-<p>Email - TyroneM@contactme.co.uk</p>
-<a href="https://drive.google.com/file/d/0B4H15TJEyv-uR2dNQWNDcnhXcDRoSk41VkVTRVIxQUM3clNB/view?usp=sharing">Link to Cirriculum Vitae doucument</a>
-<p>Phone number - 07947382891</p>
-<p>Twitter - @tyrone300_</p>
+   <div class="col">coll1</div>
+   <div class="col">coll2</div>
+   <div class="col">coll3</div>
+   </div>
