--- a/collection.html
+++ b/collection.html
@@ -30,7 +30,19 @@
 
 
 <div class="row">
-   <div class="col">coll1</div>
-   <div class="col">coll2</div>
-   <div class="col">coll3</div>
-   </div>
+   <div class="col"><img src="Image(3).jpg." alt="holiday" width="200" height="320"> </div>
+   <div class="col"><img src="Image(3).jpg." alt="holiday" width="200" height="320"> </div>
+   <div class="col"><img src="Image(2).jpg." alt="holiday" width="200" height="320"></div>
+   <div class="col"><img src="Image(1).jpg." alt="holiday" width="200" height="320"></div>
+   <div class="col"><img src="Image(1).jpg." alt="holiday" width="200" height="320"></div>
+   <div class="col"><img src="Image(5).jpg." alt="holiday" width="200" height="320"></div>
+ </div>
+
+
+ <footer>
+     <h2>Keep in contact</h2>
+     <p>Email - TyroneM@contactme.co.uk</p>
+     <a href="https://spando360.github.io/tyrone-bio/cv.html">Link to Cirriculim</a>
+     <p>Phone number - 07947382891</p>
+     <p>Twitter - @tyrone300_</p>
+ </footer>
