--- a/collection.html
+++ b/collection.html
@@ -28,15 +28,15 @@
 
 </body>
 
+<a href="https://spando360.github.io/tyrone-bio/biography.html"><img src="Image(3).jpg" height="320" width="200">"</a>
 
-<div class="row">
    <div class="col"><img src="Image(3).jpg." alt="holiday" width="200" height="320"> </div>
    <div class="col"><img src="Image(3).jpg." alt="holiday" width="200" height="320"> </div>
    <div class="col"><img src="Image(2).jpg." alt="holiday" width="200" height="320"></div>
    <div class="col"><img src="Image(1).jpg." alt="holiday" width="200" height="320"></div>
    <div class="col"><img src="Image(1).jpg." alt="holiday" width="200" height="320"></div>
    <div class="col"><img src="Image(5).jpg." alt="holiday" width="200" height="320"></div>
- </div>
+
 
 
  <footer>
