--- a/collection.html
+++ b/collection.html
@@ -28,12 +28,20 @@
 
 </body>
 
+
 <a href=><img src="Image(3).jpg" height="320" width="200">"</a>
 <a href=><img src="Image(3).jpg" height="320" width="200">"</a>
 <a href=><img src="Image(2).jpg" height="320" width="200">"</a>
 <a href=><img src="Image(1).jpg" height="320" width="200">"</a>
 <a href=><img src="Image(2).jpg" height="320" width="200">"</a>
 <a href=><img src="Image(1).jpg" height="320" width="200">"</a>
+<a href=><img src="Image(3).jpg" height="320" width="200">"</a>
+<a href=><img src="Image(3).jpg" height="320" width="200">"</a>
+<a href=><img src="Image(2).jpg" height="320" width="200">"</a>
+<a href=><img src="Image(1).jpg" height="320" width="200">"</a>
+<a href=><img src="Image(2).jpg" height="320" width="200">"</a>
+<a href=><img src="Image(1).jpg" height="320" width="200">"</a>
+
  <footer>
      <h2>Keep in contact</h2>
      <p>Email - TyroneM@contactme.co.uk</p>
