--- a/collection.html
+++ b/collection.html
@@ -27,20 +27,28 @@
 
 
 </body>
+<div class="row">
+        <div class="col">
+            <div class="col"><a href=><img src="Image(3).jpg" height="320" width="200">"</a></div>
+        </div>
+        <div class="col">
+            <div class="col"><a href=><img src="Image(3).jpg" height="320" width="200">"</a></div>
+        </div>
+        <div class="col">
+            <div class="col"><a href=><img src="Image(2).jpg" height="320" width="200">"</a></div>
+        </div>
+        <div class="col">
+            <div class="col"><a href=><img src="Image(1).jpg" height="320" width="200">"</a></div>
+        </div>
+        <div class="col">
+            <div class="col"><a href=><img src="Image(2).jpg" height="320" width="200">"</a></div>
+        </div>
+        <div class="col">
+            <div class="col"><a href=><img src="Image(1).jpg" height="320" width="200">"</a></div>
+        </div>
+    </div>
 
 
-<a href=><img src="Image(3).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(3).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(2).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(1).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(2).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(1).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(3).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(3).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(2).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(1).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(2).jpg" height="320" width="200">"</a>
-<a href=><img src="Image(1).jpg" height="320" width="200">"</a>
 
  <footer>
      <h2>Keep in contact</h2>
