--- a/collection.html
+++ b/collection.html
@@ -46,6 +46,12 @@
         <div class="col">
             <div class="col"><a href=><img src="Image(1).jpg" height="320" width="200">"</a></div>
         </div>
+<div class="col">
+            <div class="col"><a href=><img src="Image(5).jpg" height="320" width="200">"</a></div>
+        </div>
+<div class="col">
+            <div class="col"><a href=><img src="Image(5).jpg" height="320" width="200">"</a></div>
+        </div>
     </div>
 
 
