--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a> </li>
-                <li><a href="collection.html">Cirriculum Vitae</a> </li>
+                <li><a href="collection.html">Collection</a> </li>
                 <li><a href="bio.html">Biography</a> </li>
                 <li><a href="contact.html">Contact Me</a> </li>
             </ul>
