--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <fieldset>
                 <h4>Contact Me</h4>
 
-                <input name="name" />
+                <input name="name" />Name:
                 <label for="email">Email: </label>
                 <input name="email" />
                 <label for="comments">Comments: </label>
