--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
             <h1>Contact Me</h1>
 
             <fieldset>
-                <h4>Contact Me</h4>
-
-                <input name="name" />Name:
-                <label for="email">Email: </label>
-                <input name="email" />
-                <label for="comments">Comments: </label>
-                <textarea name="comments"></textarea>
-            </fieldset>
+              <h4>Contact Me</h4>
+              <label class="labelone" for "name">Name: </label>
+              <input name="name" />
+              <label for="email">Email: </label>
+              <input name="email" />
+              <label for="comments">Comments: </label>
+              <textarea name="comments"></textarea>
+          </fieldset>
             <fieldset>
                 <input class="btn" type="submit" value="Send Email" />
                 <input class="btn" type="reset" value="Reset Form" />
