--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <footer>
     <h2>Keep in contact</h2>
     <p>Email - TyroneM@contactme.co.uk</p>
-
+  <a href="https://spando360.github.io/tyrone-collection/collection.html">Link to Collection Page</a>
     <p>Twitter - @tyrone300_</p>
 </footer>
 
