--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>tyrone-bio </title>
+    <title>Meet the Team </title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -15,19 +15,21 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a> </li>
-            <li><a href="collection.html">Collection</a> </li>
-            <li><a href="bio.html">Biography</a> </li>
-            <li><a href="contact.html">Contact Me</a> </li>
+            <li><a href="glossary.html">Collection</a> </li>
+            <li><a href="comparison.html">Comparison</a> </li>
+            <li><a href="spec.html"> Specialisation</a> </li>
         </ul>
     </nav>
-    <h1> Homepage</h1>
+    <h1> Meet the Team..</h1>
     <a href="https://spando360.github.io/tyrone-collection/collection.html"><img src="new picture.jpg.png" width="295">"</a>
-    <p>Hello and welcome to my collection website, this is where you'll get to find out a whole lot of exlusive exotic images which I've captured whilst traveling. Dont hesitate to explore your way around my website using my user friendly navigations located on the top of the webpages. Click on the picture below to be
-        directed straight to my collection page.</p>
+    <p>
+    </p>
+        .</p>
 
         <footer>
             <h2>Keep in contact</h2>
             <p>Email - TyroneM@contactme.co.uk</p>
+
           <a href="https://spando360.github.io/tyrone-collection/collection.html">Link to Collection Page</a>
             <p>Twitter - @tyrone300_</p>
         </footer>
