--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a> </li>
-            <li><a href="glossary.html">Collection</a> </li>
+            <li><a href="glossary.html">Glossary</a> </li>
             <li><a href="comparison.html">Comparison</a> </li>
             <li><a href="spec.html"> Specialisation</a> </li>
+            <li><a href="model.html"> Model</a> </li>
+            <li><a href="reflection.html"> Reflection</a> </li>
         </ul>
     </nav>
     <h1> Meet the Team..</h1>
-    <a href="https://spando360.github.io/tyrone-collection/collection.html"><img src="new picture.jpg.png" width="295">"</a>
-    <p>
-    </p>
-        .</p>
+    <img src="new picture.jpg.png" width="295">"
+    <img src="Team.jpg" width="295">
+    <img src="Team 2.jpg" width="295">
+    <p>This is my team, together we are motivated to accomplish any task which lays ahead of us. Meet Michael he is a 19 year old student who seeks to be a game developer as he has a strong passion in gaming. Meet Darnell, 20 year old student who enjoys creating websites in his free time as he has a goal of become a web developer in the near future. Lastly meet Tyrone, also a 19 year old student who enjoys the gaming community and would love to become a game developer.</p>
 
-        <footer>
-            <h2>Keep in contact</h2>
-            <p>Email - TyroneM@contactme.co.uk</p>
+    <footer>
+        <h2>Keep in contact</h2>
+        <p>Email - TyroneM@contactme.co.uk</p>
 
-          <a href="https://spando360.github.io/tyrone-collection/collection.html">Link to Collection Page</a>
-            <p>Twitter - @tyrone300_</p>
-        </footer>
+        
+        <p>Twitter - @tyrone300_</p>
+    </footer>
 
 </body>
 
