--- a/spec.html
+++ b/spec.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a> </li>
-            <li><a href="glossary.html">Collection</a> </li>
-            <li><a href="comparison.html">Comparison</a> </li>
-            <li><a href="spec.html">Specialisation</a> </li>
-        </ul>
-    </nav>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a> </li>
+        <li><a href="glossary.html">Glossary</a> </li>
+        <li><a href="comparison.html">Comparison</a> </li>
+        <li><a href="spec.html">Specialisation</a> </li>
+        <li><a href="model.html"> Model</a> </li>
+        <li><a href="reflection.html"> Reflection</a> </li>
+    </ul>
+</nav>
 
 
-    <h1>About My Computing Specialisation</h1>
-<p>Firstly, Web developers develop and maintain websites and web applications. Even their work usually focuses solely on the underlying software and databases (known as the 'back end'), some web developers work on the interface and visual design (the 'front end'), while others combine both ('full-stack development').
+<h1>About My Computing Specialisation</h1>
+<p>Firstly, Web developers develop and maintain websites and web applications. Even their work usually focuses solely on the underlying software and databases (known as the 'back end'), some web developers work on the interface and visual design (the 'front
+    end'), while others combine both ('full-stack development').
 </p>
 <p>Click onto the image below to be directed straight to a YouTube video which covers the career as a web developer </p>
-  <a href="https://www.youtube.com/watch?v=T9JHEOmYqn4"><img src="Web pic.jpg.jpg" width="295">"
+<a href="https://www.youtube.com/watch?v=T9JHEOmYqn4"><img src="Web pic.jpg.jpg" width="295">"
 
 
 
@@ -29,11 +32,10 @@
     <footer>
         <h2>Keep in contact</h2>
         <p>Email - TyroneM@Collection.co.uk</p>
-        <a href="https://spando360.github.io/tyrone-collection/collection.html">Link to Collection Page</a>
         <p>Phone number - 07947382891</p>
         <p>Twitter - @tyrone300_</p>
     </footer>
-</body>
+    </body>
 
 
 </html>
