--- a/comparison.html
+++ b/comparison.html
@@ -28,7 +28,7 @@
 
 
 </p>
-<p>Whereas being a game developer is more of a hobby than an actual job role</p>
+<p>Whereas being a game developer is more of a hobby than an actual job role. Game developers, often referred to as video game developers or video game designers, are software developers and engineers who create video games. Game developers may be involved in various aspects of a game's creation from concept and story writing to the coding and programming.</p>
 <footer>
     <h2>Keep in contact</h2>
     <p>Email - TyroneM@Collection.co.uk</p>
