--- a/spec.html
+++ b/spec.html
@@ -24,7 +24,7 @@
     end'), while others combine both ('full-stack development').
 </p>
 <p>Click onto the image below to be directed straight to a YouTube video which covers the career as a web developer </p>
-<a href="https://www.youtube.com/watch?v=T9JHEOmYqn4"><img src="Web pic.jpg.jpg" width="295">"
+<a href="https://www.youtube.com/watch?v=T9JHEOmYqn4"><img src="web-dev.png" width="295">"
 
 
 
