--- a/reflection.html
+++ b/reflection.html
@@ -26,7 +26,7 @@
 </p>
 
 <h2>Wireframe</h2>
-    <img src="Wireframe.jpg" width="295">
+    <img src="wireframe 2.png" width="295">
 
   <p>Above is a wireframe which me and the team drew in order to plan the layout of how every page was going to be. We decided to go with the conventional website look which has the hyperlinks at the top, the footer at the bottom followed by a background in the middle of the page.</p>
 <h2>Validation</h2>
